*need make functional and global the alerts from store *tomorrow apply styles for toast components *defined middlewares, models and routes for roles and vehicles

--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
+    "ngx-toastr": "^15.0.0",
     "nodemon": "^2.0.15",
     "sass": "^1.54.0",
+    "sweetalert": "^2.1.2",
+    "toastr": "^2.1.4",
     "vue": "^2.7.8",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
+    "vue-toastr-2": "0.0.10",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
   },
